# transpicta

./: .gitignore  CMakeLists.txt  README.md  a.out  error.go  go.mod  go.sum  handlers.go  main.cc  scraper.go  server.go  shell.nix  transpicta.h  utils.go  write.h
Quiz-game/: main.go
URL-Shortner/: .gitignore  go.mod  handler.go  main.go  url.yaml
includes/: decoder.h  helper.h  transpicta.h
